# SciCoDa

./: QUICKSTART.ipynb  README.md  pytest.ini
pkg/: pyproject.toml
pkg/src/scicoda/: __init__.py  atom.py  data.py  exception.py  pdb.py
pkg/src/scicoda/create/: __init__.py  atom.py  pdb.py
pkg/src/scicoda/data/atom/: autodock_atom_types.json  autodock_atom_types.yaml  periodic_table.parquet  radii_vdw_blue_obelisk.json  radii_vdw_blue_obelisk.yaml  van_der_waals_radii.yaml
pkg/src/scicoda/data/pdb/: ccd-chem_comp.parquet  ccd-pdbx_chem_comp_atom_related.parquet  ccd-pdbx_chem_comp_audit.parquet  ccd-pdbx_chem_comp_feature.parquet  ccd-pdbx_chem_comp_identifier.parquet  ccd-pdbx_chem_comp_pcm.parquet  ccd-pdbx_chem_comp_related.parquet  ccd-pdbx_chem_comp_synonyms.parquet
pkg/src/scicoda/fetch/: __init__.py  pdb.py  pubchem.py
pkg/src/scicoda/update/: __init__.py  atom.py  pdb.py  pubchem.py
test/: README.md  conftest.py  test_atom.py  test_create_atom.py  test_create_pdb.py  test_data.py  test_exception.py  test_pdb.py  test_update.py  test_update_atom.py  test_update_pdb.py
test/data_schema/atom/: autodock_atom_types.yaml  radii_vdw_blue_obelisk.yaml
test/data_schema/pdb/: ccd-chem_comp.yaml  ccd-chem_comp_atom.yaml  ccd-chem_comp_bond.yaml  ccd-pdbx_chem_comp_atom_related.yaml  ccd-pdbx_chem_comp_audit.yaml  ccd-pdbx_chem_comp_descriptor.yaml  ccd-pdbx_chem_comp_feature.yaml  ccd-pdbx_chem_comp_identifier.yaml  ccd-pdbx_chem_comp_pcm.yaml  ccd-pdbx_chem_comp_related.yaml  ccd-pdbx_chem_comp_synonyms.yaml
