[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "SciCoDa"
version = "0.2.3"
requires-python = ">=3.10"
dependencies = [
    "pkgdata >=0.1,<0.2",
    "pyserials >=0.1,<0.2",
    "polars >=1,<2",
    "dfhelp==0.0.1",
]

[project.optional-dependencies]
ccd = [
    "pdbapi",
    "ciffile",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
